--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "open api",
     "top client"
   ],
-  "author": "harold",
+  "author": "harold3c2",
   "license": "WTFPL",
   "dependencies": {
     "agentkeepalive": "^4.1.2",
@@ -31,5 +31,14 @@
     "@typescript-eslint/parser": "^2.30.0",
     "eslint": "^6.8.0",
     "typescript": "^3.8.3"
-  }
+  },
+  "repository": {
+    "url": "https://github.com/hezhuowei/promise-top-sdk.git",
+    "type": "git"
+  },
+  "homepage": "https://github.com/hezhuowei/promise-top-sdk",
+  "bugs": {
+    "url": "https://github.com/hezhuowei/promise-top-sdk/issues",
+    "email": "hezhuowei@126.com"
+  } 
 }
